--- a/ScrapyKeeper/code_template/sources/weixin/master/scrapy.cfg
+++ b/ScrapyKeeper/code_template/sources/weixin/master/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = master.settings
+default = {{project_name}}.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = master
+project = {{project_name}}
